--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'Zanna Personal Use Only';
+  src: url(../assets/fonts/Zanna-Personal.otf) format('opentype');
+  font-weight: normal;
+  font-style: normal; 
+}
+
+@font-face {
+  font-family: 'Inria Serif';
+  src: url(../assets/fonts/InriaSerif-Regular.otf) format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   font-family: 'DM Sans', sans-serif;
   overflow-x: hidden;
@@ -45,10 +59,10 @@ body {
 }
 
 .logo{
-  margin-left: 40px;
+  margin-left: 150px;
   width: 106.21px;
 height: 26px;
-top: 37px;
+top: 40px;
 left: 80px;
 gap: 0px;
 opacity: 0px;
@@ -81,10 +95,15 @@ z-index: 1;
   margin: 0 0 30px -10px;
   font-family: Zanna Personal Use Only;
 font-size: 96px;
-font-weight: bold;
+font-weight: 200;
 line-height: 100.6px;
 text-align: left;
 
+}
+
+.first p {
+  font-family: Inria Serif;
+  font-size: 1.2rem;
 }
 
 .button--hero{
@@ -141,16 +160,29 @@ text-align: left;
   z-index: 1;
 }
 
+.section--two--container p{
+  font-family: Inria Serif;
+  font-size: 1.2rem;
+}
+
 .section--third--container{
   width: 360px;
   margin-left: 10%;
   z-index: 1;
+  margin-top: -100px;
 }
 
 h2{
+  font-family: Zanna Personal Use Only;
   font-size: 3rem;
-  letter-spacing: -2px;
-  line-height: 2.5rem;
+  font-weight: 200;
+  line-height: 3.5rem;
+  letter-spacing: 0.01rem;
+}
+
+.section--third--container p{
+  font-family: Inria Serif;
+  font-size: 1.2rem;
 }
 
 .custom--bg{
@@ -164,7 +196,7 @@ h2{
   position: absolute;
   top: 0;
   left: 0;
-  margin-top: -200px;
+  margin-top: -260px;
 }
 
 .custom--bg2{
@@ -178,7 +210,7 @@ h2{
   position: absolute;
   top: 0;
   left: 0;
-  margin-top: 1800px;
+  margin-top: 2100px;
 }
 
 .fourth{
@@ -202,6 +234,7 @@ opacity: 0px;
 font-size: 200px;
 font-weight: 400;
 line-height: 270px;
+margin-left: -34px;
 }
 
 .sub-title{
@@ -214,22 +247,6 @@ footer{
   background: black;
   display: flex;
   justify-content: center;
-}
-
-.button--footer{
-  background: white;
-  color: black;
-  border: none;
-  border-radius: 50px;
-  padding: 10px 30px;
-  font-size: 0.6rem;
-  cursor: pointer;
-  transition: all 0.8s ease;
-}
-
-.button--footer:hover{
-  background: black;
-  color: white;
 }
 
 #webgi-canvas {
@@ -399,4 +416,124 @@ line-height: 69.08px;
   
   
 
+}
+
+.footer01 {
+  width: 100%;
+  height: 400px;
+  background: #929394;
+  display: flex;
+}
+
+.section1 {
+  width: 300px;
+  height: 85%;
+  margin: 20px;
+  margin-top: 50px;
+  float: left;
+}
+
+.section1 img {
+  width: 250px;
+}
+
+.section1 p {
+  font-weight: 600;
+}
+
+.button-ctc {
+  background: #000;
+  color: #fff;
+  padding: 10px 20px;
+  width: 150px;
+  height: 50px;
+}
+
+.section2 {
+  width: 300px;
+  height: 85%;
+  margin: 20px;
+  margin-top: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+  float: left;
+}
+
+.section2 h3 {
+  font-weight: 600;
+}
+
+.section2 i {
+  padding-right: 7px;
+}
+
+.section3 {
+  width: 300px;
+  height: 85%;
+  margin: 20px;
+  margin-top: 50px;
+  float: left;
+}
+
+.section3 input {
+  margin-top: 15px;
+  background-color: #929394;
+  width: 200px;
+  height: 42px;
+  border: #000000 2px solid;
+  border-radius: 5px;
+}
+
+.section3 i {
+  width: 30px;
+  height: 30px;
+  padding-top: 6px;
+  padding-left: 7px;
+  border-radius: 3px;
+  background-color: rgb(219, 218, 218);
+  margin-left: -35px;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer02 {
+  width: 100px;
+  height: 0;
+  margin-left: auto;
+  margin-right: 10px;
+}
+
+.divider {
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+}
+
+.button--footer{
+  width: 50px;
+  height: 50px;
+  margin-top: -60px;
+  margin-right: 40px;
+  background: white;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 25px;
+  cursor: pointer;
+  transition: all 0.8s ease;
+}
+
+.button--footer:hover{
+  background: black;
+  color: white;
+}
+
+.footer04 {
+  width: 100%;
+  height: 40px;
+  background: #929394;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
