--- a/src/styles.css
+++ b/src/styles.css
@@ -444,10 +444,20 @@ left: 16px;
     margin-left: 5px;
   }
   
-  .sub-title{
-    z-index: 10;
-    margin-bottom: -220px;
-  /* padding-left: 700px; */
+  .sub-title {
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 70px;
+    margin-right: 200px;
+    margin-left: -50px;
+    align-items: center;
+    justify-content: center;
+  }
+  
+
+  .sub-title h2 {
+    font-size: 20px;
   }
 
 }
