--- a/src/styles.css
+++ b/src/styles.css
@@ -315,6 +315,10 @@ footer{
   background-color: rgb(74, 76, 79);
 }
 
+.sub-titlem {
+  display: none;
+}
+
 /* MOBILE ADJUSTMENTS */
 
 @media (max-width: 600px) {
@@ -415,9 +419,9 @@ footer{
     height: 51.17px;
     top: 139.82px;
     left: 16px;
-    gap: 85px;
+    gap: 90px;
     opacity: 0px;
-    margin-left: 275px;
+    margin-left: -30px;
     margin-top: -220px;
   }
   
@@ -430,19 +434,18 @@ footer{
   }
   
   .sub-title {
-    height: 50px;
-    align-items: center;
-    justify-content: center;
-    margin-top: 70px;
-    margin-right: 500px;
-    margin-left: -350px;
-    align-items: center;
-    justify-content: center;
+    display: none;
+  }
+
+  .sub-titlem {
+    display: inline;
+    margin-top: -190px;
+    margin-left: 130px;
+  }
+
+  .sub-titlem h2{
+    font-size: 15px;
   }
   
-
-  .sub-title h2 {
-    font-size: 20px;
-  }
 
 }
