--- a/src/styles.css
+++ b/src/styles.css
@@ -324,6 +324,10 @@ footer{
   display: none;
 }
 
+footer {
+  display: none;
+}
+
 /* MOBILE ADJUSTMENTS */
 
 @media (max-width: 600px) {
@@ -417,6 +421,7 @@ footer{
   .fourth{
     justify-content: center;
     position: relative;
+    height: 400px;
   }
   .section--fourth--logo{
     display: flex;
@@ -424,10 +429,10 @@ footer{
     height: 51.17px;
     top: 139.82px;
     left: 16px;
-    gap: 90px;
+    gap: 85px;
     opacity: 0px;
     margin-left: -30px;
-    margin-top: -220px;
+    margin-top: -210px;
   }
   
   .section--fourth--logo h1{
@@ -435,6 +440,7 @@ footer{
     font-size: 60px;
     font-weight: 400;
     line-height: 69.08px;
+    padding-top: 10px;
     margin-left: 5px;
   }
   
@@ -444,12 +450,27 @@ footer{
 
   .sub-titlem {
     display: inline;
-    margin-top: -190px;
+    margin-top: -160px;
     margin-left: 130px;
   }
 
   .sub-titlem h2{
     font-size: 15px;
+  }
+
+  footer {
+    display: block;
+    width: 100%;
+    height: 150px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  footer p {
+    color: white;
+    font-size: 15px;
+    text-align: center;
+
   }
   
 
