--- a/src/styles.css
+++ b/src/styles.css
@@ -348,8 +348,12 @@ footer {
   .nav--bar{
     margin-top: 0;
     z-index: 1;
-    padding: 30px 0;
+    padding: 20px 0;
     backdrop-filter: blur(5px);
+  }
+
+  .logo {
+    margin-left: 120px;
   }
   
   .section--one--container {
@@ -421,7 +425,7 @@ footer {
   .fourth{
     justify-content: center;
     position: relative;
-    height: 400px;
+    height: 600px;
   }
   .section--fourth--logo{
     display: flex;
@@ -429,10 +433,10 @@ footer {
     height: 51.17px;
     top: 139.82px;
     left: 16px;
-    gap: 85px;
+    gap: 92px;
     opacity: 0px;
     margin-left: -30px;
-    margin-top: -210px;
+    margin-top: -290px;
   }
   
   .section--fourth--logo h1{
@@ -440,7 +444,7 @@ footer {
     font-size: 60px;
     font-weight: 400;
     line-height: 69.08px;
-    padding-top: 10px;
+    padding-top: 200px;
     margin-left: 5px;
   }
   
@@ -450,7 +454,7 @@ footer {
 
   .sub-titlem {
     display: inline;
-    margin-top: -160px;
+    margin-top: 60px;
     margin-left: 130px;
   }
 
@@ -458,10 +462,10 @@ footer {
     font-size: 15px;
   }
 
-  footer {
+  /* footer {
     display: block;
     width: 100%;
-    height: 150px;
+    height: 100px;
     align-items: center;
     justify-content: center;
   }
@@ -471,7 +475,7 @@ footer {
     font-size: 15px;
     text-align: center;
 
-  }
+  } */
   
 
 }
