--- a/src/styles.css
+++ b/src/styles.css
@@ -324,13 +324,287 @@ footer{
   display: none;
 }
 
-footer {
-  display: none;
-}
-
 /* MOBILE ADJUSTMENTS */
 
-@media (max-width: 600px) {
+@media (max-width: 600px) and ( max-height: 1000px) {
+
+
+  html, body, .container, nav{
+    overflow-x: hidden;
+  }
+
+  .first h2{
+    font-size: 32px;
+    width: 50%;
+    margin: 0 ;
+  }
+
+  .nav--bar{
+    margin-top: 0;
+    z-index: 1;
+    padding: 20px 0;
+    backdrop-filter: blur(5px);
+  }
+
+  .logo {
+    margin-left: 120px;
+  }
+  
+  .section--one--container {
+    width: 360px;
+    margin-left: 6%;
+    margin-top: 60%;
+  }
+
+  .section--one--container > p {
+    width: 70%;
+    margin: 0;
+  }
+
+  
+  .section--third--container {
+    width: 100%;
+    margin-left: 7%;
+    padding: 0;
+  }
+
+  .section--third--container h2 {
+    margin: 0;
+    font-size: 32px;
+  }
+
+  .custom--bg{
+    width: 100%;
+  height: 800px;
+  background:  #FFFFFF;
+  -webkit-transform: skew(65deg);
+  -moz-transform: skew(65deg);
+  -o-transform: skew(65deg);
+  transform: skew(65deg) rotate(65deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: -650px;
+  }
+  .custom--bg2{
+    width: 100%;
+    height: 600px;
+    background:  #FFFFFF;
+    -webkit-transform: skew(140deg);
+    -moz-transform: skew(140deg);
+    -o-transform: skew(140deg);
+    transform: skew(140deg) rotate(140deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 1800px;
+  }
+
+  .second{
+    width: 100%;
+    margin-left: 7%;
+    padding-top: 200px;
+  }
+
+  .second h2 {
+    font-size: 32px;
+    letter-spacing: 0;
+    margin: 0;
+  }
+
+  h2{
+    font-family: Zanna Personal Use Only;
+    font-size: 3rem;
+    font-weight: 200;
+    line-height: 3rem;
+  }
+  
+.nav--bar{
+    margin-left: -100px;
+  }
+
+  .fourth{
+    justify-content: center;
+    position: relative;
+    height: 800px;
+  }
+  .section--fourth--logo{
+    display: flex;
+    width: 119.74px;
+    height: 51.17px;
+    top: 139.82px;
+    left: 16px;
+    gap: 120px;
+    opacity: 0px;
+    margin-left: -25px;
+    margin-top: -290px;
+  }
+  
+  .section--fourth--logo h1{
+    font-family: Zanna Personal Use Only;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 69.08px;
+    padding-top: 100px;
+    margin-left: 0px;
+  }
+  
+  .sub-title {
+    display: none;
+  }
+
+  .sub-titlem {
+    display: inline;
+    margin-top: -140px;
+    margin-left: 130px;
+  }
+
+  .sub-titlem h2{
+    font-size: 15px;
+  }  
+
+}
+
+@media (max-width: 600px) and ( max-height: 900px) {
+
+
+  html, body, .container, nav{
+    overflow-x: hidden;
+  }
+
+  .first h2{
+    font-size: 32px;
+    width: 50%;
+    margin: 0 ;
+  }
+
+  .nav--bar{
+    margin-top: 0;
+    z-index: 1;
+    padding: 20px 0;
+    backdrop-filter: blur(5px);
+  }
+
+  .logo {
+    margin-left: 120px;
+  }
+  
+  .section--one--container {
+    width: 360px;
+    margin-left: 6%;
+    margin-top: 60%;
+  }
+
+  .section--one--container > p {
+    width: 70%;
+    margin: 0;
+  }
+
+  
+  .section--third--container {
+    width: 100%;
+    margin-left: 7%;
+    padding: 0;
+  }
+
+  .section--third--container h2 {
+    margin: 0;
+    font-size: 32px;
+  }
+
+  .custom--bg{
+    width: 100%;
+  height: 800px;
+  background:  #FFFFFF;
+  -webkit-transform: skew(65deg);
+  -moz-transform: skew(65deg);
+  -o-transform: skew(65deg);
+  transform: skew(65deg) rotate(65deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: -650px;
+  }
+  .custom--bg2{
+    width: 100%;
+    height: 600px;
+    background:  #FFFFFF;
+    -webkit-transform: skew(140deg);
+    -moz-transform: skew(140deg);
+    -o-transform: skew(140deg);
+    transform: skew(140deg) rotate(140deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 1800px;
+  }
+
+  .second{
+    width: 100%;
+    margin-left: 7%;
+    padding-top: 200px;
+  }
+
+  .second h2 {
+    font-size: 32px;
+    letter-spacing: 0;
+    margin: 0;
+  }
+
+  h2{
+    font-family: Zanna Personal Use Only;
+    font-size: 3rem;
+    font-weight: 200;
+    line-height: 3rem;
+  }
+  
+.nav--bar{
+    margin-left: -100px;
+  }
+
+  .fourth{
+    justify-content: center;
+    position: relative;
+    height: 700px;
+  }
+  .section--fourth--logo{
+    display: flex;
+    width: 119.74px;
+    height: 51.17px;
+    top: 139.82px;
+    left: 16px;
+    gap: 105px;
+    opacity: 0px;
+    margin-left: -25px;
+    margin-top: -290px;
+  }
+  
+  .section--fourth--logo h1{
+    font-family: Zanna Personal Use Only;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 69.08px;
+    padding-top: 100px;
+    margin-left: 5px;
+  }
+  
+  .sub-title {
+    display: none;
+  }
+
+  .sub-titlem {
+    display: inline;
+    margin-top: -140px;
+    margin-left: 130px;
+  }
+
+  .sub-titlem h2{
+    font-size: 15px;
+  }  
+
+}
+
+@media (max-width: 600px) and (max-height: 800px) {
 
 
   html, body, .container, nav{
@@ -465,22 +739,842 @@ footer {
 
   .sub-titlem h2{
     font-size: 15px;
+  }  
+
+}
+
+@media (max-width: 600px) and (max-height: 750px) {
+
+
+  html, body, .container, nav{
+    overflow-x: hidden;
   }
 
-  /* footer {
-    display: block;
-    width: 100%;
-    height: 100px;
-    align-items: center;
-    justify-content: center;
+  .first h2{
+    font-size: 32px;
+    width: 50%;
+    margin: 0 ;
   }
 
-  footer p {
-    color: white;
-    font-size: 15px;
-    text-align: center;
+  .nav--bar{
+    margin-top: 0;
+    z-index: 1;
+    padding: 20px 0;
+    backdrop-filter: blur(5px);
+  }
 
-  } */
+  .logo {
+    margin-left: 120px;
+  }
   
+  .section--one--container {
+    width: 360px;
+    margin-left: 6%;
+    margin-top: 60%;
+  }
+
+  .section--one--container > p {
+    width: 70%;
+    margin: 0;
+  }
+
+  
+  .section--third--container {
+    width: 100%;
+    margin-left: 7%;
+    padding: 0;
+  }
+
+  .section--third--container h2 {
+    margin: 0;
+    font-size: 32px;
+  }
+
+  .custom--bg{
+    width: 100%;
+  height: 800px;
+  background:  #FFFFFF;
+  -webkit-transform: skew(65deg);
+  -moz-transform: skew(65deg);
+  -o-transform: skew(65deg);
+  transform: skew(65deg) rotate(65deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: -650px;
+  }
+  .custom--bg2{
+    width: 100%;
+    height: 600px;
+    background:  #FFFFFF;
+    -webkit-transform: skew(140deg);
+    -moz-transform: skew(140deg);
+    -o-transform: skew(140deg);
+    transform: skew(140deg) rotate(140deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 1800px;
+  }
+
+  .second{
+    width: 100%;
+    margin-left: 7%;
+    padding-top: 200px;
+  }
+
+  .second h2 {
+    font-size: 32px;
+    letter-spacing: 0;
+    margin: 0;
+  }
+
+  h2{
+    font-family: Zanna Personal Use Only;
+    font-size: 3rem;
+    font-weight: 200;
+    line-height: 3rem;
+  }
+  
+.nav--bar{
+    margin-left: -100px;
+  }
+
+  .fourth{
+    justify-content: center;
+    position: relative;
+    height: 550px;
+  }
+  .section--fourth--logo{
+    display: flex;
+    width: 119.74px;
+    height: 51.17px;
+    top: 139.82px;
+    left: 16px;
+    gap: 100px;
+    opacity: 0px;
+    margin-left: -25px;
+    margin-top: -290px;
+  }
+  
+  .section--fourth--logo h1{
+    font-family: Zanna Personal Use Only;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 69.08px;
+    padding-top: 100px;
+    margin-left: 8px;
+  }
+  
+  .sub-title {
+    display: none;
+  }
+
+  .sub-titlem {
+    display: inline;
+    margin-top: -140px;
+    margin-left: 130px;
+  }
+
+  .sub-titlem h2{
+    font-size: 15px;
+  }  
+
+}
+
+@media (max-width: 600px) and (max-height: 700px) {
+
+
+  html, body, .container, nav{
+    overflow-x: hidden;
+  }
+
+  .first h2{
+    font-size: 32px;
+    width: 50%;
+    margin: 0 ;
+  }
+
+  .nav--bar{
+    margin-top: 0;
+    z-index: 1;
+    padding: 20px 0;
+    backdrop-filter: blur(5px);
+  }
+
+  .logo {
+    margin-left: 120px;
+  }
+  
+  .section--one--container {
+    width: 360px;
+    margin-left: 6%;
+    margin-top: 60%;
+  }
+
+  .section--one--container > p {
+    width: 70%;
+    margin: 0;
+  }
+
+  
+  .section--third--container {
+    width: 100%;
+    margin-left: 7%;
+    padding: 0;
+  }
+
+  .section--third--container h2 {
+    margin: 0;
+    font-size: 32px;
+  }
+
+  .custom--bg{
+    width: 100%;
+  height: 800px;
+  background:  #FFFFFF;
+  -webkit-transform: skew(65deg);
+  -moz-transform: skew(65deg);
+  -o-transform: skew(65deg);
+  transform: skew(65deg) rotate(65deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: -650px;
+  }
+  .custom--bg2{
+    width: 100%;
+    height: 600px;
+    background:  #FFFFFF;
+    -webkit-transform: skew(140deg);
+    -moz-transform: skew(140deg);
+    -o-transform: skew(140deg);
+    transform: skew(140deg) rotate(140deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 1800px;
+  }
+
+  .second{
+    width: 100%;
+    margin-left: 7%;
+    padding-top: 200px;
+  }
+
+  .second h2 {
+    font-size: 32px;
+    letter-spacing: 0;
+    margin: 0;
+  }
+
+  h2{
+    font-family: Zanna Personal Use Only;
+    font-size: 3rem;
+    font-weight: 200;
+    line-height: 3rem;
+  }
+  
+.nav--bar{
+    margin-left: -100px;
+  }
+
+  .fourth{
+    justify-content: center;
+    position: relative;
+    height: 500px;
+  }
+  .section--fourth--logo{
+    display: flex;
+    width: 119.74px;
+    height: 51.17px;
+    top: 139.82px;
+    left: 16px;
+    gap: 80px;
+    opacity: 0px;
+    margin-left: -25px;
+    margin-top: -290px;
+  }
+  
+  .section--fourth--logo h1{
+    font-family: Zanna Personal Use Only;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 69.08px;
+    padding-top: 100px;
+    margin-left: 17px;
+  }
+  
+  .sub-title {
+    display: none;
+  }
+
+  .sub-titlem {
+    display: inline;
+    margin-top: -140px;
+    margin-left: 130px;
+  }
+
+  .sub-titlem h2{
+    font-size: 15px;
+  }  
+
+}
+
+
+@media (max-width: 600px) and (max-height: 650px) {
+
+
+  html, body, .container, nav{
+    overflow-x: hidden;
+  }
+
+  .first h2{
+    font-size: 32px;
+    width: 50%;
+    margin: 0 ;
+  }
+
+  .nav--bar{
+    margin-top: 0;
+    z-index: 1;
+    padding: 20px 0;
+    backdrop-filter: blur(5px);
+  }
+
+  .logo {
+    margin-left: 120px;
+  }
+  
+  .section--one--container {
+    width: 360px;
+    margin-left: 6%;
+    margin-top: 60%;
+  }
+
+  .section--one--container > p {
+    width: 70%;
+    margin: 0;
+  }
+
+  
+  .section--third--container {
+    width: 100%;
+    margin-left: 7%;
+    padding: 0;
+  }
+
+  .section--third--container h2 {
+    margin: 0;
+    font-size: 32px;
+  }
+
+  .custom--bg{
+    width: 100%;
+  height: 800px;
+  background:  #FFFFFF;
+  -webkit-transform: skew(65deg);
+  -moz-transform: skew(65deg);
+  -o-transform: skew(65deg);
+  transform: skew(65deg) rotate(65deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: -650px;
+  }
+  .custom--bg2{
+    width: 100%;
+    height: 600px;
+    background:  #FFFFFF;
+    -webkit-transform: skew(140deg);
+    -moz-transform: skew(140deg);
+    -o-transform: skew(140deg);
+    transform: skew(140deg) rotate(140deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 1800px;
+  }
+
+  .second{
+    width: 100%;
+    margin-left: 7%;
+    padding-top: 200px;
+  }
+
+  .second h2 {
+    font-size: 32px;
+    letter-spacing: 0;
+    margin: 0;
+  }
+
+  h2{
+    font-family: Zanna Personal Use Only;
+    font-size: 3rem;
+    font-weight: 200;
+    line-height: 3rem;
+  }
+  
+.nav--bar{
+    margin-left: -100px;
+  }
+
+  .fourth{
+    justify-content: center;
+    position: relative;
+    height: 450px;
+  }
+  .section--fourth--logo{
+    display: flex;
+    width: 119.74px;
+    height: 51.17px;
+    top: 139.82px;
+    left: 16px;
+    gap: 80px;
+    opacity: 0px;
+    margin-left: -25px;
+    margin-top: -290px;
+  }
+  
+  .section--fourth--logo h1{
+    font-family: Zanna Personal Use Only;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 69.08px;
+    padding-top: 100px;
+    margin-left: 17px;
+  }
+  
+  .sub-title {
+    display: none;
+  }
+
+  .sub-titlem {
+    display: inline;
+    margin-top: -140px;
+    margin-left: 130px;
+  }
+
+  .sub-titlem h2{
+    font-size: 15px;
+  }  
+
+}
+
+
+@media (max-width: 600px) and (max-height: 600px) {
+
+
+  html, body, .container, nav{
+    overflow-x: hidden;
+  }
+
+  .first h2{
+    font-size: 32px;
+    width: 50%;
+    margin: 0 ;
+  }
+
+  .nav--bar{
+    margin-top: 0;
+    z-index: 1;
+    padding: 20px 0;
+    backdrop-filter: blur(5px);
+  }
+
+  .logo {
+    margin-left: 120px;
+  }
+  
+  .section--one--container {
+    width: 360px;
+    margin-left: 6%;
+    margin-top: 60%;
+  }
+
+  .section--one--container > p {
+    width: 70%;
+    margin: 0;
+  }
+
+  
+  .section--third--container {
+    width: 100%;
+    margin-left: 7%;
+    padding: 0;
+  }
+
+  .section--third--container h2 {
+    margin: 0;
+    font-size: 32px;
+  }
+
+  .custom--bg{
+    width: 100%;
+  height: 800px;
+  background:  #FFFFFF;
+  -webkit-transform: skew(65deg);
+  -moz-transform: skew(65deg);
+  -o-transform: skew(65deg);
+  transform: skew(65deg) rotate(65deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: -650px;
+  }
+  .custom--bg2{
+    width: 100%;
+    height: 600px;
+    background:  #FFFFFF;
+    -webkit-transform: skew(140deg);
+    -moz-transform: skew(140deg);
+    -o-transform: skew(140deg);
+    transform: skew(140deg) rotate(140deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 1800px;
+  }
+
+  .second{
+    width: 100%;
+    margin-left: 7%;
+    padding-top: 200px;
+  }
+
+  .second h2 {
+    font-size: 32px;
+    letter-spacing: 0;
+    margin: 0;
+  }
+
+  h2{
+    font-family: Zanna Personal Use Only;
+    font-size: 3rem;
+    font-weight: 200;
+    line-height: 3rem;
+  }
+  
+.nav--bar{
+    margin-left: -100px;
+  }
+
+  .fourth{
+    justify-content: center;
+    position: relative;
+    height: 400px;
+  }
+  .section--fourth--logo{
+    display: flex;
+    width: 119.74px;
+    height: 51.17px;
+    top: 139.82px;
+    left: 16px;
+    gap: 80px;
+    opacity: 0px;
+    margin-left: -25px;
+    margin-top: -290px;
+  }
+  
+  .section--fourth--logo h1{
+    font-family: Zanna Personal Use Only;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 69.08px;
+    padding-top: 100px;
+    margin-left: 17px;
+  }
+  
+  .sub-title {
+    display: none;
+  }
+
+  .sub-titlem {
+    display: inline;
+    margin-top: -140px;
+    margin-left: 130px;
+  }
+
+  .sub-titlem h2{
+    font-size: 15px;
+  }  
+
+}
+
+@media (max-width: 600px) and (max-height: 550px) {
+
+
+  html, body, .container, nav{
+    overflow-x: hidden;
+  }
+
+  .first h2{
+    font-size: 32px;
+    width: 50%;
+    margin: 0 ;
+  }
+
+  .nav--bar{
+    margin-top: 0;
+    z-index: 1;
+    padding: 20px 0;
+    backdrop-filter: blur(5px);
+  }
+
+  .logo {
+    margin-left: 120px;
+  }
+  
+  .section--one--container {
+    width: 360px;
+    margin-left: 6%;
+    margin-top: 60%;
+  }
+
+  .section--one--container > p {
+    width: 70%;
+    margin: 0;
+  }
+
+  
+  .section--third--container {
+    width: 100%;
+    margin-left: 7%;
+    padding: 0;
+  }
+
+  .section--third--container h2 {
+    margin: 0;
+    font-size: 32px;
+  }
+
+  .custom--bg{
+    width: 100%;
+  height: 800px;
+  background:  #FFFFFF;
+  -webkit-transform: skew(65deg);
+  -moz-transform: skew(65deg);
+  -o-transform: skew(65deg);
+  transform: skew(65deg) rotate(65deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: -650px;
+  }
+  .custom--bg2{
+    width: 100%;
+    height: 600px;
+    background:  #FFFFFF;
+    -webkit-transform: skew(140deg);
+    -moz-transform: skew(140deg);
+    -o-transform: skew(140deg);
+    transform: skew(140deg) rotate(140deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 1800px;
+  }
+
+  .second{
+    width: 100%;
+    margin-left: 7%;
+    padding-top: 200px;
+  }
+
+  .second h2 {
+    font-size: 32px;
+    letter-spacing: 0;
+    margin: 0;
+  }
+
+  h2{
+    font-family: Zanna Personal Use Only;
+    font-size: 3rem;
+    font-weight: 200;
+    line-height: 3rem;
+  }
+  
+.nav--bar{
+    margin-left: -100px;
+  }
+
+  .fourth{
+    justify-content: center;
+    position: relative;
+    height: 350px;
+  }
+  .section--fourth--logo{
+    display: flex;
+    width: 119.74px;
+    height: 51.17px;
+    top: 139.82px;
+    left: 16px;
+    gap: 80px;
+    opacity: 0px;
+    margin-left: -25px;
+    margin-top: -290px;
+  }
+  
+  .section--fourth--logo h1{
+    font-family: Zanna Personal Use Only;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 69.08px;
+    padding-top: 100px;
+    margin-left: 17px;
+  }
+  
+  .sub-title {
+    display: none;
+  }
+
+  .sub-titlem {
+    display: inline;
+    margin-top: -140px;
+    margin-left: 130px;
+  }
+
+  .sub-titlem h2{
+    font-size: 15px;
+  }  
+
+}
+
+@media (max-width: 600px) and (max-height: 500px) {
+
+
+  html, body, .container, nav{
+    overflow-x: hidden;
+  }
+
+  .first h2{
+    font-size: 32px;
+    width: 50%;
+    margin: 0 ;
+  }
+
+  .nav--bar{
+    margin-top: 0;
+    z-index: 1;
+    padding: 20px 0;
+    backdrop-filter: blur(5px);
+  }
+
+  .logo {
+    margin-left: 120px;
+  }
+  
+  .section--one--container {
+    width: 360px;
+    margin-left: 6%;
+    margin-top: 60%;
+  }
+
+  .section--one--container > p {
+    width: 70%;
+    margin: 0;
+  }
+
+  
+  .section--third--container {
+    width: 100%;
+    margin-left: 7%;
+    padding: 0;
+  }
+
+  .section--third--container h2 {
+    margin: 0;
+    font-size: 32px;
+  }
+
+  .custom--bg{
+    width: 100%;
+  height: 800px;
+  background:  #FFFFFF;
+  -webkit-transform: skew(65deg);
+  -moz-transform: skew(65deg);
+  -o-transform: skew(65deg);
+  transform: skew(65deg) rotate(65deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: -650px;
+  }
+  .custom--bg2{
+    width: 100%;
+    height: 600px;
+    background:  #FFFFFF;
+    -webkit-transform: skew(140deg);
+    -moz-transform: skew(140deg);
+    -o-transform: skew(140deg);
+    transform: skew(140deg) rotate(140deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 1800px;
+  }
+
+  .second{
+    width: 100%;
+    margin-left: 7%;
+    padding-top: 200px;
+  }
+
+  .second h2 {
+    font-size: 32px;
+    letter-spacing: 0;
+    margin: 0;
+  }
+
+  h2{
+    font-family: Zanna Personal Use Only;
+    font-size: 3rem;
+    font-weight: 200;
+    line-height: 3rem;
+  }
+  
+.nav--bar{
+    margin-left: -100px;
+  }
+
+  .fourth{
+    justify-content: center;
+    position: relative;
+    height: 300px;
+  }
+  .section--fourth--logo{
+    display: flex;
+    width: 119.74px;
+    height: 51.17px;
+    top: 139.82px;
+    left: 16px;
+    gap: 40px;
+    opacity: 0px;
+    margin-left: -25px;
+    margin-top: -290px;
+  }
+  
+  .section--fourth--logo h1{
+    font-family: Zanna Personal Use Only;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 69.08px;
+    padding-top: 100px;
+    margin-left: 30px;
+  }
+  
+  .sub-title {
+    display: none;
+  }
+
+  .sub-titlem {
+    display: inline;
+    margin-top: -140px;
+    margin-left: 130px;
+  }
+
+  .sub-titlem h2{
+    font-size: 15px;
+  }  
 
 }
