--- a/src/styles.css
+++ b/src/styles.css
@@ -221,13 +221,14 @@ h2{
 .fourth{
   justify-content: center;
   position: relative;
+  height: 500px;
 }
 .section--fourth--logo{
   display: flex;
   justify-content: space-between;
   width: 468px;
 height: 200px;
-margin-top: -100px;
+margin-top: 100px;
 margin-left: -40px;
 gap: 300px;
 opacity: 0px;
@@ -243,16 +244,11 @@ margin-left: -34px;
 }
 
 .sub-title{
-  margin-top: 200px;
+  margin-top: 180px;
 padding-left: 700px;
 }
 
 
-footer{
-  background: black;
-  display: flex;
-  justify-content: center;
-}
 
 #webgi-canvas {
   width: 100%;
@@ -272,57 +268,41 @@ footer{
   align-items: center;
 }
 
-.button--exit{
-  width: 90px;
-  margin-bottom: 5%;
-  z-index: 5;
-  position: fixed;
-  bottom: 0;
-  display: none;
-}
-
-.customizer--container{
-  position: fixed;
-  top: 50%;
-  display: none;
-  transform: translateY(-50%);
-}
-
-.strap--colors{
-  list-style: none;
-}
-
-.button--colors{
-  width: 30px;
-  height: 30px;
-  border-radius: 50px;
-  border: 1px solid white;
-  padding: 0;
-  margin-bottom: 10px;
-  cursor: pointer;
-  transition: all 0.8s ease;
-}
-
-.button--colors:hover{
-  filter: drop-shadow(0 0 0.75rem rgba(28, 17, 52, 0.704));
-  transform: scale(1.5);
-}
-
-.yellow{
-  background-color: #F0D56C;
-}
-
-.red{
-  background-color: rgb(231, 34, 34);
-}
-
-.black{
-  background-color: rgb(74, 76, 79);
-}
-
 .sub-titlem {
   display: none;
 }
+
+.footer {
+  background: black;
+  display: flex;
+  position: relative;
+  font-family: Inria Serif;
+  color: #FFFFFF;
+  width: 100%;
+  height: 200px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.left {
+  align-items: center;
+  margin-left: 40%;
+  width: 100%;
+  justify-items: center;
+}
+
+.left img {
+  margin-top: -15px;
+  margin-left: -6px;
+}
+
+/* .right {
+  width: 30%;
+}
+
+.social {
+  width: 30%;
+} */
 
 /* MOBILE ADJUSTMENTS */
 
@@ -426,7 +406,7 @@ footer{
   .fourth{
     justify-content: center;
     position: relative;
-    height: 800px;
+    height: 500px;
   }
   .section--fourth--logo{
     display: flex;
@@ -444,6 +424,7 @@ footer{
     font-family: Zanna Personal Use Only;
     font-size: 55px;
     font-weight: 400;
+    margin-top: 190px;
     line-height: 69.08px;
     padding-top: 100px;
     margin-left: 0px;
@@ -455,13 +436,47 @@ footer{
 
   .sub-titlem {
     display: inline;
-    margin-top: -140px;
+    padding-top: 150px;
     margin-left: 130px;
   }
 
   .sub-titlem h2{
     font-size: 15px;
   }  
+
+  .footer {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left {
+    width: 60%;
+    margin-left: 0; 
+  }
+  
+  .left img {
+    margin-top: -15px;
+    margin-left: -6px;
+  }
+
+  .footer {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left {
+    width: 60%;
+    margin-left: 0; 
+  }
+  
+  .left img {
+    margin-top: -15px;
+    margin-left: -6px;
+  }
 
 }
 
@@ -565,7 +580,7 @@ footer{
   .fourth{
     justify-content: center;
     position: relative;
-    height: 700px;
+    height: 400px;
   }
   .section--fourth--logo{
     display: flex;
@@ -576,7 +591,7 @@ footer{
     gap: 105px;
     opacity: 0px;
     margin-left: -25px;
-    margin-top: -290px;
+    margin-top: -140px;
   }
   
   .section--fourth--logo h1{
@@ -601,6 +616,23 @@ footer{
   .sub-titlem h2{
     font-size: 15px;
   }  
+
+  .footer {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left {
+    width: 60%;
+    margin-left: 0; 
+  }
+  
+  .left img {
+    margin-top: -15px;
+    margin-left: -6px;
+  }
 
 }
 
@@ -704,7 +736,7 @@ footer{
   .fourth{
     justify-content: center;
     position: relative;
-    height: 650px;
+    height: 500px;
   }
   .section--fourth--logo{
     display: flex;
@@ -715,7 +747,7 @@ footer{
     gap: 105px;
     opacity: 0px;
     margin-left: -25px;
-    margin-top: -290px;
+    margin-top: -65px;
   }
   
   .section--fourth--logo h1{
@@ -733,13 +765,30 @@ footer{
 
   .sub-titlem {
     display: inline;
-    margin-top: -140px;
+    margin-top: 0px;
     margin-left: 130px;
   }
 
   .sub-titlem h2{
     font-size: 15px;
   }  
+
+  .footer {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left {
+    width: 60%;
+    margin-left: 0; 
+  }
+  
+  .left img {
+    margin-top: -15px;
+    margin-left: -6px;
+  }
 
 }
 
