--- a/src/styles.css
+++ b/src/styles.css
@@ -458,6 +458,7 @@ padding-left: 700px;
   }
 
   .left p {
+    width: 100%;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -634,6 +635,7 @@ padding-left: 700px;
   }
 
   .left p {
+    width: 100%;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -810,6 +812,7 @@ padding-left: 700px;
   }
 
   .left p {
+    width: 100%;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -985,6 +988,7 @@ padding-left: 700px;
   }
 
   .left p {
+    width: 100%;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -1438,6 +1442,7 @@ padding-left: 700px;
   }
 
   .left p {
+    width: 100%;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -1614,6 +1619,7 @@ padding-left: 700px;
   }
 
   .left p {
+    width: 100%;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -1791,6 +1797,7 @@ padding-left: 700px;
   }
 
   .left p {
+    width: 100%;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -1968,6 +1975,7 @@ padding-left: 700px;
   }
 
   .left p {
+    width: 100%;
     font-size: 13px;
     padding-top: 15px;
   }
