--- a/src/styles.css
+++ b/src/styles.css
@@ -458,7 +458,7 @@ padding-left: 700px;
   }
 
   .left p {
-    width: 100%;
+    width: 200px;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -635,7 +635,7 @@ padding-left: 700px;
   }
 
   .left p {
-    width: 100%;
+    width: 200px;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -812,7 +812,7 @@ padding-left: 700px;
   }
 
   .left p {
-    width: 100%;
+    width: 200px;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -988,7 +988,7 @@ padding-left: 700px;
   }
 
   .left p {
-    width: 100%;
+    width: 200px;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -1442,7 +1442,7 @@ padding-left: 700px;
   }
 
   .left p {
-    width: 100%;
+    width: 200px;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -1619,7 +1619,7 @@ padding-left: 700px;
   }
 
   .left p {
-    width: 100%;
+    width: 200px;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -1797,7 +1797,7 @@ padding-left: 700px;
   }
 
   .left p {
-    width: 100%;
+    width: 200px;
     font-size: 13px;
     padding-top: 15px;
   }
@@ -1975,7 +1975,7 @@ padding-left: 700px;
   }
 
   .left p {
-    width: 100%;
+    width: 200px;
     font-size: 13px;
     padding-top: 15px;
   }
